changed markdown *.md to *.mdx

--- a/src/pages/blog/0_matmul.mdx
+++ b/src/pages/blog/0_matmul.mdx
@@ -1,15 +1,14 @@
 ---
 layout: ../../layouts/BlogLayout.astro
-title: ChatGPT для создания интерьеров
-description: ИИ стремительно врывается во все области деятельности. Рассмотрим возможности ChatGPT на примере проекта маленькой квартиры.
-tags: ["code", "html"]
-time: 4
-featured: false
+title: Матрицы трансформаций
+description: Будучи крайне функциональними достаточно легки в освоении и могут пригодится для решения задач, которые иначе могли быть крайне нетривиальными.
+tags: ["графика", "математика"]
+time: 15
+featured: true
 timestamp: 2024-12-18T02:39:03+00:00
-filename: 1_ai-aided-design
+filename: 0_matmul
 ---
-
-
+Матрицы трансформаций зачастую используются в самой начинке многих графических программ. Основной их задачей являются такие трансформации как **перемещения, вращения, масштабирования, сдвиги,** а также (что немаловажно) **их композиции**. В этом материале я попробую объяснить самые базовые принципы матриц трансформаций.
 
 ## Определения трансформаций
 Разогрев)
