--- a/src/pages/blog/1_ai-aided-design.mdx
+++ b/src/pages/blog/1_ai-aided-design.mdx
@@ -1,16 +1,16 @@
 ---
 layout: ../../layouts/BlogLayout.astro
-title: Матрицы трансформаций
-description: Будучи крайне функциональними достаточно легки в освоении и могут пригодится для решения задач, которые иначе могли быть крайне нетривиальными.
-tags: ["графика", "математика"]
-time: 4
-featured: true
+title: ChatGPT для создания интерьеров
+description: ИИ стремительно врывается во все области деятельности. Рассмотрим возможности ChatGPT на примере проекта маленькой квартиры.
+tags: ["code", "html"]
+time: 20
+featured: false
 timestamp: 2024-12-18T02:39:03+00:00
-filename: 0_matmul
+filename: 1_ai-aided-design
 ---
 
-Матрицы трансформаций зачастую используются в самой начинке многих графических программ. Основной их задачей являются такие трансформации как **перемещения, вращения, масштабирования, сдвиги,** а также (что немаловажно) **их композиции**. В этом материале я попробую объяснить самые базовые принципы матриц трансформаций.
 
+<div>
 ## Определения трансформаций
 Разогрев)
 
@@ -115,3 +115,5 @@ After mastering basic HTML, consider learning:
 - Responsive design techniques
 
 Remember, every website you visit is built with HTML at its core. With practice, you'll be able to create increasingly complex web pages that form the foundation of your web development journey.
+
+</div>
