--- a/src/pages/projects/1_jelondi.mdx
+++ b/src/pages/projects/1_jelondi.mdx
@@ -2,26 +2,36 @@
 layout: ../../layouts/ProjectLayout.astro
 title: Jelondi Resort
 description: Эскизный проект для горного санатория в ГБАО, Таджикистан.
-tags: ["Blender", "Эскиз", "Памир"]
+tags: ["Blender", "Эскиз", "GeoNodes"]
 # githubUrl: https://github.com/RATIU5/zaggonaut
 timestamp: 2025-02-24T02:39:03+00:00
 featured: true
 filename: 1_jelondi
 ---
+import ImageBox from "../../components/ImageBox.astro";
 
-# Space Modeller
+<ImageBox src="/jelondi/1_main.jpg"></ImageBox>
 
-Zaggonaut is a retro-inspired theme for Astro, built using TypeScript, TailwindCSS, and Astro. Use this theme to power your own personal website, blog, or portfolio with flexibility and customization.
+|                |                 |
+| -------------- | ----------------|
+| Проектное бюро | ООО Дамир       |
+| Дата сдачи     | 10 января 2022  |
+| Расположение   | Джелонди, ГБАО  |
+| Площадь        | 456.7 м²        |
 
-## The Features
+Санаторий находится вблизи термальных источников. Местность равнинная,
+здание видно с расстояния более 1 км.
 
-- Dark & light mode
-- Customizable colors
-- 100 / 100 Lighthouse score
-- Fully accessible
-- Fully responsive
-- Type-safe
+## Концептуальная экспликация:
+|||
+|-|-|
+|Цокольный этаж|- Бассейны|
+|Первый этаж|- Ресепшен - Магазин|
+|Второй этаж|  - Жилая зона - Ресторан|  
 
-## The Future
+Эскиз сделан в **Blender**-е. Параметрические элементы с помощью **Geometry Nodes**.
 
-Check out [the theme website](https://zaggonaut.dev) to see it in action!
+<ImageBox src="/jelondi/2_front.jpg"/>
+<ImageBox src="/jelondi/3_side.jpg"/>
+
+Проектное бюро "Дамир"
