--- a/src/pages/projects/2_veggie.mdx
+++ b/src/pages/projects/2_veggie.mdx
@@ -25,3 +25,4 @@ import ImageBox from "../../components/ImageBox.astro"
 
 <ImageBox lightOrDark="light" src="/veggie/day-pers.jpg"/>
 <ImageBox lightOrDark="dark" src="/veggie/night-pers.jpg"/>
+<ImageBox lightOrDark="both" src="/veggie/retexture-mj.jpg">Retexture в Midjourney</ImageBox>
