Added a blog post about-me

--- a/src/pages/projects/0_vr-arch-pro.mdx
+++ b/src/pages/projects/0_vr-arch-pro.mdx
@@ -11,7 +11,7 @@ filename: 0_vr-arch-pro
 import VideoBox from "../../components/VideoBox.astro"
 import ImageBox from "../../components/ImageBox.astro"
 
-<VideoBox src="/sm/latest.mp4" poster="/sm/screenshot.jpg">Кодовое название: SM-01</VideoBox>
+<VideoBox src="/sm/latest.mp4" poster="/sm/screenshot.jpg">Кодовое название: SpaceModeller 0.0</VideoBox>
 
 Pet-проект создан на движке **UnrealEngine** и во многом является обёрткой над аддоном **GeometryScripting**.
 Целю проекта являлось оценка возможностей **VR в архитектурном проектировании**.
